<resources>
    <string name="app_name">LMS STIKES</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="stikes">STIKES RS HUSADA</string>
    <string name="stikes_1">Mobile Learning For Students</string>
    <string name="menu_1">Whats On</string>
    <string name="menu_2">Schedule</string>
    <string name="menu_3">All Menu</string>
    <string name="student_id">ID</string>
    <string name="student_name">Name</string>
    <string name="gpa">Grade Point Average</string>
    <string name="dashboard">Dashboard</string>
    <string name="schedule">Schedule</string>
    <string name="announcement">Announcement</string>
    <string name="knowledge">Knowledge</string>
    <string name="whatson">Whats On</string>
    <string name="campus">Campus Directory</string>
    <string name="about">About STIKES</string>
    <string name="view_all">View All</string>
    <string name="exam">Exam</string>
    <string name="error_network">Connection Problem</string>
    <string name="detail">Detail</string>
    <string name="period">Schedule Period</string>
    <string name="course">Course</string>
    <string name="course_code">Course Code</string>
    <string name="type">Type</string>
    <string name="course_class">Class</string>
    <string name="session">Session</string>
    <string name="latest_post">Latest Post</string>
    <string name="indicator">Schedule Indicators</string>
    <string name="video">Video Conference</string>
    <string name="event">Events</string>
    <string name="onsite">Onsite</string>
    <string name="new_thread">New Thread</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="type_subject">Type the subject</string>
    <string name="type_message">Type a message</string>
    <string name="attendance">Attendance</string>
    <string name="score">Score</string>
    <string name="forum">Forum</string>
    <string name="quote">Quote</string>
    <string name="reply">Reply</string>
    <string name="div">|</string>
    <string name="thread">Thread</string>
    <string name="com">Com</string>
    <string name="total_session">Total Session</string>
    <string name="max_absence">Max Absence</string>
    <string name="session_done">Session Done</string>
    <string name="total_absence">Total Absence</string>
    <string name="final_exam">Final Exam</string>
    <string name="assignment">Assignment</string>
    <string name="forum_discussion">Forum Discussion</string>
    <string name="vc_attendance">VC Attendance</string>
    <string name="quiz">Quiz</string>
    <string name="final_score">Final Score</string>
    <string name="grade">Grade</string>
    <string name="logout">Logout</string>
    <string name="confirmation">Confirmation</string>
    <string name="question">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="success_logout">Logout Successfully</string>
    <string name="success_login">Login Successfully</string>
    <string name="description">Description</string>
    <string name="download_exam">Downloading Exam Questions</string>
    <string name="course_schedule">Course Schedule</string>
    <string name="detail_schedule">Detail Schedule</string>
    <string name="deadline">Deadline</string>
    <string name="status">Status</string>
    <string name="room">Room</string>
    <string name="location">Location</string>
    <string name="loading">Loading..</string>
    <string name="about_app">Tentang Aplikasi\nMobile Online STIKES RS Husada adalah aplikasi pembelajaran daring dikembangkan atas penelitian dan pengembangan antara Universitas Bina Nusantara dan STIKES RS Husada Jakarta\n\nTim Pengembang Aplikasi\nTim Universitas Bina Nusantara:\nDr. Viany Utami Tjhin, S.Kom., MM\nDwi Listriana Kusumastuti, S.Si., MMSI\nRegina Eka Riantini, S.Mb., M.M.\n\nTim STIKES RS Husada Jakarta:\nEllynia, SE.,MM\nTim IT STIKES RS Husada\n\nTim Designer:\nMoch. Hari Febriansyah\n
    </string>
</resources>