<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/splash_screen_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_x2"
            android:src="@drawable/ic_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_x2"
            android:text="@string/new_thread"
            android:layout_toEndOf="@+id/close"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/space_x2"
            android:src="@drawable/ic_menu" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_x2"
        android:text="@string/session"
        android:textColor="@android:color/black"
        android:textSize="12sp" />
    <TextView
        android:id="@+id/session_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space_x2_half"
        android:paddingEnd="@dimen/space_x2_half"
        android:text="@string/session"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_x2"
        android:text="@string/subject"
        android:textColor="@android:color/black"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/input_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_x2"
        android:layout_marginEnd="@dimen/space_x2"
        android:hint="@string/type_subject"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_x2"
        android:text="@string/message"
        android:textColor="@android:color/black"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/input_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_x2"
        android:layout_marginEnd="@dimen/space_x2"
        android:hint="@string/type_message"/>

</LinearLayout>