<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_x2"
    app:cardCornerRadius="@dimen/space_x1"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gradient_2"
            android:padding="@dimen/space_x2"
            android:text="@string/course"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/course_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/course_code"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/c_class"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/c_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/course_class"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/course_code"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/course_code"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/course_class"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/course_code" />

            <TextView
                android:id="@+id/course_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/course_class"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/code"
                app:layout_constraintTop_toBottomOf="@id/course_code" />


            <TextView
                android:id="@+id/absence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/final_exam"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/max"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/code" />

            <TextView
                android:id="@+id/max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/assignment"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/absence"
                app:layout_constraintTop_toBottomOf="@id/code" />

            <TextView
                android:id="@+id/final_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/final_exam"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/assignment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/absence" />

            <TextView
                android:id="@+id/assignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/assignment"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/final_exam"
                app:layout_constraintTop_toBottomOf="@id/absence" />

            <TextView
                android:id="@+id/forum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/forum_discussion"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/vc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/final_exam" />

            <TextView
                android:id="@+id/vc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/vc_attendance"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/forum"
                app:layout_constraintTop_toBottomOf="@id/final_exam" />

            <TextView
                android:id="@+id/forum_discussion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/session_done"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/vc_attendance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forum" />

            <TextView
                android:id="@+id/vc_attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/total_absence"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/forum_discussion"
                app:layout_constraintTop_toBottomOf="@id/forum" />

            <TextView
                android:id="@+id/qui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/quiz"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forum_discussion" />

            <TextView
                android:id="@+id/quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/quiz"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/qui" />

            <TextView
                android:id="@+id/finals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/final_score"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/gra"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quiz" />

            <TextView
                android:id="@+id/gra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/grade"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/finals"
                app:layout_constraintTop_toBottomOf="@id/quiz" />

            <TextView
                android:id="@+id/final_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/final_score"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/grade"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/finals" />

            <TextView
                android:id="@+id/grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/grade"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/final_score"
                app:layout_constraintTop_toBottomOf="@id/finals" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>