<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/space_x1"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_rounded"
            android:orientation="vertical">
            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_x2"
                android:paddingEnd="@dimen/space_x2"
                android:paddingTop="@dimen/space_x2"
                android:text="@string/course"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_x2"
                android:paddingEnd="@dimen/space_x2"
                android:paddingBottom="@dimen/space_x2"
                android:paddingTop="@dimen/space_x1"
                android:text="@string/course"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_x2"
            android:paddingEnd="@dimen/space_x2"
            android:paddingTop="@dimen/space_x1"
            android:paddingBottom="@dimen/space_x2">

            <TextView
                android:id="@+id/course_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:text="@string/course_code"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/class_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/class_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:text="@string/course_class"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:text="@string/description"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@id/class_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/course_code"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/course_code"
                app:layout_constraintEnd_toEndOf="@id/course_code"
                app:layout_constraintTop_toBottomOf="@id/course_code" />

            <TextView
                android:id="@+id/exam_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_x1"
                android:text="@string/course_class"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/class_text"
                app:layout_constraintStart_toStartOf="@id/class_text"
                app:layout_constraintTop_toBottomOf="@id/course_code" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="@dimen/space_x12"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:textAlignment="center"
                android:text="@string/description"
                android:maxLines="2"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/com"
                app:layout_constraintEnd_toEndOf="@id/com"
                app:layout_constraintTop_toBottomOf="@id/course_code" />
            <View
                android:id="@+id/line_h"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_x1"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/desc" />

            <View
                android:id="@+id/line_v"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/download_text"
                app:layout_constraintBottom_toBottomOf="@id/status"/>

            <TextView
                android:id="@+id/download_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x2"
                android:text="@string/download_exam"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_h" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x2"
                android:layout_marginStart="@dimen/space_x2"
                android:text="@string/room"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/line_v"
                app:layout_constraintTop_toBottomOf="@id/line_h" />

            <TextView
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:text="@string/total_session"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/download_text" />

            <TextView
                android:id="@+id/room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:layout_marginStart="@dimen/space_x2"
                android:text="@string/max_absence"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/line_v"
                app:layout_constraintTop_toBottomOf="@id/download_text" />

            <TextView
                android:id="@+id/deadline_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:text="@string/deadline"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/download" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:layout_marginStart="@dimen/space_x2"
                android:text="@string/location"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/line_v"
                app:layout_constraintTop_toBottomOf="@id/download" />

            <TextView
                android:id="@+id/deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:text="@string/session_done"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deadline_text" />

            <ImageView
                android:id="@+id/ic_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:layout_marginStart="@dimen/space_x2"
                android:src="@drawable/ic_marker"
                app:layout_constraintStart_toEndOf="@id/line_v"
                app:layout_constraintTop_toBottomOf="@id/deadline_text"
                app:tint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:text="@string/total_absence"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/ic_marker"
                app:layout_constraintTop_toBottomOf="@id/deadline_text" />

            <TextView
                android:id="@+id/status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:text="@string/status"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deadline" />
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:text="@string/status"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/status_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>